# ignis

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  INK_NATIVE_GAP_ANALYSIS.md  LICENSE  README.md  config.example.toml  config.yaml  install.sh
.claude/skills/dogfood/: SKILL.md  tui_shot.py
.claude/skills/ship/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
.ignis/extensions/: hello.py  hello.yaml
benchmarks/: RESULTS.md
benchmarks/terminal-bench/: .gitignore  README.md  pyproject.toml  run.sh
benchmarks/terminal-bench/history/: tb2-deepseek-v4-flash-max-20260529.csv  tb21-deepseek-v4-flash-max-20260603.csv  tb21-deepseek-v4-pro-max-ark-20260611.csv  tb21-glm-5.1-20260608.csv  tb21-glm-5.1-ark-20260609.csv  tb21-kimi-for-coding-20260606.csv  tb21-minimax-m3-20260602.csv  tb21-minimax-m3-20260603.csv
benchmarks/terminal-bench/ignis_agent/: __init__.py  agent.py
benchmarks/terminal-bench/scripts/: aggregate_results.py  bundle_traces.py  compare_runs.py  generate_report.py  monitor.py  test_redact.py
docs/: README.md  commands.md  permissions.md  telemetry.md  web-search.md
docs/configure/: mcp.md  permissions.md  skills.md  telemetry.md
docs/usage/: commands.md  extensions.md  hooks.md
examples/extensions/: README.md
examples/extensions/auto-test/: README.md  run.sh
examples/extensions/bash-deny-rm-rf/: README.md  run.sh
examples/extensions/system-prompt-trim/: README.md  run.sh
examples/extensions/translate-en/: README.md  run.py  test_run.py
examples/hooks/: README.md
examples/hooks/auto-test/: README.md  run.sh
examples/hooks/bash-deny-rm-rf/: README.md  run.sh
examples/hooks/system-prompt-trim/: README.md  run.sh
examples/hooks/translate-en/: README.md  test_run.py
examples/skills/commit-style/: SKILL.md
ignis/: Cargo.toml
ignis-macros/: Cargo.toml
ignis-macros/src/: lib.rs
ignis-tui/: README.md  package-lock.json  package.json
ignis-tui/src/: app.js  cli.js  diff-view.js  engine.js  highlight.js  keymap.js  markdown.js  paste-stream.js  protocol.js
ignis-tui/test/: app.e2e.test.js  append_only.e2e.test.js  background.e2e.test.js  chrome.e2e.test.js  compact.e2e.test.js  copy.e2e.test.js  diff-view.test.js  editor.e2e.test.js  flicker.e2e.test.js  flicker_streaming.e2e.test.js  followups.e2e.test.js  harness.js  highlight.test.js  keymap.test.js  markdown.test.js  paste-stream.test.js  protocol.test.js  queue.e2e.test.js  reasoning.e2e.test.js  resize.e2e.test.js  sessions.e2e.test.js  todos.e2e.test.js
ignis/src/: cli.rs  config.rs  interaction.rs  lib.rs  logger.rs  main.rs  plugin.rs  provider.rs  session.rs  state.rs  storage.rs  telemetry.rs  tool.rs  tools.rs  types.rs  util.rs
ignis/src/agent/: agents_md.rs  follow_ups.rs  mod.rs
ignis/src/cli/: mcp.rs  mod.rs  sessions.rs  upgrade.rs
ignis/src/console/: app.rs  clipboard.rs  colors.rs  composer.rs  connect.rs  format.rs  git.rs  highlight.rs  inline_picker.rs  keys.rs  markdown.rs  mod.rs  picker.rs  pickers_state.rs  render.rs  render_diag.rs  runner.rs  settings.rs  slash.rs  transcript.rs
ignis/src/console/frontend/: broker.rs  command.rs  hub.rs  in_process.rs  local.rs  mod.rs  port.rs  protocol.rs  stdio.rs
ignis/src/console/render/: anchor.rs  blocks.rs  composer.rs  footer.rs  layout.rs  loading.rs  mod.rs  pickers.rs  queued.rs  slash.rs  stack.rs  stream_commit.rs  tool_block.rs  widgets.rs
ignis/src/extensions/: config.rs  dispatch.rs  mod.rs  protocol.rs  sandbox.rs
ignis/src/hooks/: config.rs  dispatch.rs  mod.rs  protocol.rs  sandbox.rs
ignis/src/llm/: catalog.rs  mod.rs  providers.rs  registry.rs
ignis/src/llm/protocols/: anthropic.rs  message.rs  mod.rs  ollama.rs  openai.rs
ignis/src/mcp/: http.rs  mod.rs  server.rs  tool.rs
ignis/src/models/: mod.rs  registry.rs
ignis/src/permissions/: builtin.rs  checker.rs  mod.rs  rule.rs  runtime.rs
ignis/src/provider/: anthropic.rs  catalog.rs  deepseek.rs  gemini.rs  message.rs  mod.rs  ollama.rs  openai.rs
ignis/src/repl/: app.rs  mod.rs  render.rs
ignis/src/sandbox/: macos.rs  mod.rs
ignis/src/session/: mod.rs  storage.rs
ignis/src/skills/: mod.rs
ignis/src/tools/: agent.rs  ask_user.rs  background.rs  bash.rs  create_file.rs  cwd.rs  edit_file.rs  glob.rs  grep.rs  list_dir.rs  mod.rs  plugin.rs  read_file.rs  skill.rs  todo_write.rs  tool.rs  util.rs  web_fetch.rs  web_search.rs  worktree.rs
ignis/tests/: agent_loop.rs  ask_user_integration.rs  bash_sandbox.rs  cli.rs  engine_e2e.rs  hook_roundtrip.rs  hook_sandbox.rs  llm_public_api.rs  mcp_http_integration.rs  mcp_integration.rs  sandbox_e2e.rs  sessions_export.rs  telemetry.rs  tool_macro.rs  tui_inline_dsr_resilience.rs  tui_slash_e2e.rs
ignis/tests/fixtures/mock_mcp_server/: main.rs
scratch/: claudecode_system_prompt_actual.md  opencode_system_prompt.md
scripts/: verify.sh
