[package]
name = "ignis-macros"
version = "0.1.0"
edition = "2021"
description = "Procedural macros for the ignis agent framework (the #[tool] attribute)."
license = "Apache-2.0"
repository = "https://github.com/Fullstop000/ignis"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
serde_json = "1.0"
