[package]
name = "ignis"
version = "0.5.0"
edition = "2021"
description = "A single-binary, multi-provider AI coding agent for your terminal."
license = "Apache-2.0"
repository = "https://github.com/Fullstop000/ignis"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
async-trait = "0.1"
dirs = "5.0"
uuid = { version = "1.0", features = ["v4"] }
bytes = "1.0"
ignis-macros = { path = "../ignis-macros" }
serde_yaml = "0.9"
toml = "0.8"
ratatui = { version = "0.26", features = ["unstable-rendered-line-info"] }
crossterm = "0.27"
unicode-width = "0.1"
ignore = "0.4"
regex = "1"
globset = "0.4"
log = "0.4"
simplelog = "0.12"
anyhow = "1.0"

[dev-dependencies]
portable-pty = "0.8"
tempfile = "3"
