[package]
name = "ignis"
version = "0.37.0"
edition = "2021"
description = "A single-binary, multi-provider AI coding agent for your terminal."
license = "Apache-2.0"
repository = "https://github.com/Fullstop000/ignis"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
async-trait = "0.1"
dirs = "5.0"
uuid = { version = "1.0", features = ["v4"] }
bytes = "1.0"
ignis-macros = { path = "../ignis-macros" }
toml = "0.8"
ratatui = { version = "0.26", features = ["unstable-rendered-line-info"] }
crossterm = "0.27"
unicode-width = "0.1"
ignore = "0.4"
regex = "1"
globset = "0.4"
log = "0.4"
simplelog = "0.12"
anyhow = "1.0"
syntect = { version = "5.3.0", default-features = false, features = ["default-fancy"] }
rmcp = { version = "1.7", default-features = false, features = ["client", "transport-child-process", "transport-streamable-http-client", "transport-streamable-http-client-reqwest"] }
# `http` v1 (header types) — what rmcp's HTTP transport accepts. Imported
# directly so we don't accidentally use the reqwest-0.11/http-0.2 lineage.
http = "1"
toml_edit = "0.22"
clap = { version = "4", features = ["derive"] }
libc = "0.2"

# `tracing` is always compiled — its `info_span!`/`#[instrument]` macros expand
# to no-ops without a subscriber, so instrumentation lives next to the code with
# no runtime cost when telemetry is disabled.
tracing = "0.1"
# The heavy OTel stack is opt-in via the `telemetry` Cargo feature.
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
tracing-opentelemetry = { version = "0.33", optional = true }
opentelemetry = { version = "0.32", optional = true }
opentelemetry_sdk = { version = "0.32", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.32", features = ["grpc-tonic", "http-proto", "tls-roots", "trace", "metrics"], optional = true }
opentelemetry-semantic-conventions = { version = "0.32", optional = true }

[features]
default = ["telemetry"]
# Enables OpenTelemetry export of traces + metrics. Runtime activation still
# requires IGNIS_ENABLE_TELEMETRY=1; the feature flag controls compilation only.
telemetry = [
    "dep:tracing-subscriber",
    "dep:tracing-opentelemetry",
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:opentelemetry-semantic-conventions",
]

[dev-dependencies]
portable-pty = "0.8"
tempfile = "3"
# Mock Streamable HTTP MCP server lives in `tests/mcp_http_integration.rs`.
# `hyper` and `hyper-util` are already pulled transitively by rmcp + reqwest;
# declaring them as dev-deps just lets the test code import them by name.
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"

[[bin]]
name = "mock_mcp_server"
path = "tests/fixtures/mock_mcp_server/main.rs"
test = false
doc = false
bench = false

