[project]
name = "ignis-harbor-agent"
version = "0.1.0"
description = "Harbor (Terminal-Bench 2.1) adapter that runs ignis inside the sandbox."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
    "harbor>=0.8",
]

[project.optional-dependencies]
# Cloud sandbox via Daytona — only needed for `harbor run --env daytona`.
daytona = ["harbor[daytona]>=0.8"]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ignis_agent"]
